--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -4,17 +4,20 @@ body{
   font-family: sans-serif;
   background-color: plum;
 }
+.total{
+  background-color: lightgray;
+}
 main{
   float: left;
   margin: 0 1.5%;
-  width: 70%;
+  width: 60%;
 }
 aside {
     position: absolute;
     right: 0;
     border: 1px solid green;
     margin: 0 1.5%;
-    width: 30%;
+    width: 40%;
 }
 .shoppingCart {
   width: 40px;
