--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -6,23 +6,27 @@
   background-color: cornflowerblue;
 }
 
-.property {
-  display: grid;
-  /* grid-template-columns: (2, 1fr); */
-  grid-template-rows: repeat(3, 1fr);
-  grid-auto-flow: column;
-  padding-left: 40%;
-  text-align: left;
+.container {
+  display: flex;
+  padding-left: 25%;
+}
 
+.flex-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  width: auto;
+  height: 200px;
+  margin: 1em;
+  display: block;
 }
 
 .cart {
-  /* display: grid; */
-  /* grid-template-columns: (2, 1fr); */
-  /* grid-template-rows: repeat(3, 1fr); */
-  /* grid-auto-flow: column; */
-  padding-left: 40%;
-  text-align: left;
+  margin: 1em;
+  text-align: right;
+  padding-left: 10%;
 }
 
 .hide-element {
