--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -2,13 +2,12 @@
   text-align: center;
 }
 
-.mainTitle {
-  background-color: cornflowerblue;
+.background {
+  background-color: rgb(190, 135, 118);
 }
 
 .container {
   display: flex;
-  padding-left: 25%;
 }
 
 .flex-item {
@@ -18,15 +17,12 @@
 
 .item {
   width: auto;
-  height: 200px;
-  margin: 1em;
+  height: auto;
   display: block;
 }
 
-.cart {
-  margin: 1em;
-  text-align: right;
-  padding-left: 10%;
+.propertyImage {
+  border:10px solid rgb(0,0,0,.4);
 }
 
 .hide-element {
@@ -41,6 +37,3 @@
   background-color: lightcoral;
 }
 
-.sticky-top {
-  position: sticky;
-}
